most recent build should be at the top of this file.

** Use the notes.html file instead of this file for change notes?

Thanks!


2.3.5.2306
----------
- Prevent an infinite redirect loop. This was happening with http://feeds.feedburner.com/factcheck/Rdqt
- Fix the article view scrolling problem reported at http://forums.cocoaforge.com/viewtopic.php?f=18&t=20814

2.3.4.2305
----------
- Fix General Preferences pane crash when trying to set default RSS reader or Download folder. Sigh.

2.3.3.2304
----------
- Fix Preferences pane crash introduced in Vienna 2.3.2.

2.3.2.2303
----------
- SECURITY: fix potential vulnerability when deleting a maliciously crafted subscription. (Reported by Julien Bachmann)
- Fix for bug 2724576: If network is down, URL tab information is lost. (Patch from Benedict Cohen).
- Fix for bug 2381168: Keychain issues with https.
- When switching back and forth from a tab, maintain the selected user interface item in the tab.

2.3.1.2302
----------
- Fix crash on Tiger when customizing toolbar.

2.3.0.2301
----------
- Drop Mac OS X 10.3 Panther support. Vienna 2.3 needs 10.4 or greater to launch.
- Leopard fix: allow option-left-arrow and option-right-arrow as keyboard shortcuts for closing and opening group folders.
- Bug fix: when validating a URL, escape any special query characters.
- Fix assertion failure when the user enters an invalid URL string in the address bar.
- Fix bug with smart folders and German umlauts.


2.3.0.2300
----------
WARNING: MAC OS X 10.3 PANTHER USERS SHOULD NOT DOWNLOAD THIS! IT WON'T RUN.

- Drop Mac OS X 10.3 Panther support. Vienna 2.3 needs 10.4 or greater to launch.
- Add folder ordering option (manually or by name).
- Improvement to Send Link for multiple links and escaped characters. (Patch from Anmol Khirbat).
- Change standard product URLs to the new www.vienna-rss.org web site.
- Bug fix: Truncated Headings in LA Times Feeds
- Bug fix: Unescaped HTML in titles.